<resources>
    <string name="app_name">SQL Learn</string>
    <string name="SQLLearn_login">"SQL Learn "</string>
    <string name="login_with_google">Signin with google</string>
    <string name="logout">Logout</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_study">Learn</string>
    <string name="menu_quiz">Quiz</string>
    <string name="menu_query">Query</string>
    <string name="menu_score">Score</string>
    <string name="menu_cirtificate">Cirtificate</string>
    <string name="menu_share">Share</string>
    <string name="menu_rate">Rate Us</string>
    <string name="menu_other">Other App</string>
    <string name="menu_logout">Log Out</string>

    <string name="home_second">Home Second</string>

    <string name="queryone_linkone">
        <a href="https://www.w3schools.com/sql/sql_select.asp">Reference Link</a>
    </string>

    <string name="queryone_linktwo">
        <a href="https://www.w3schools.com/sql/sql_create_table.asp">Reference Link</a>
    </string>

    <string name="queryone_linkthree">
        <a href="https://www.w3schools.com/sql/sql_where.asp">Reference Link</a>
    </string>

    <string name="queryone_linkfour">
        <a href="https://www.w3schools.com/sql/sql_orderby.asp">Reference Link</a>
    </string>

    <string name="queryone_linkfive">
        <a href="https://www.w3schools.com/sql/sql_insert.asp">Reference Link</a>
    </string>

    <string name="querytwo_linkone">
        <a href="https://www.w3schools.com/sql/sql_null_values.asp">Reference Link</a>
    </string>

    <string name="querytwo_linktwo">
        <a href="https://www.w3schools.com/sql/sql_update.asp">Reference Link</a>
    </string>

    <string name="querytwo_linkthree">
        <a href="https://www.w3schools.com/sql/sql_update.asp">Reference Link</a>
    </string>

    <string name="querytwo_linkfour">
        <a href="https://www.w3schools.com/sql/sql_delete.asp">Reference Link</a>
    </string>

    <string name="querytwo_linkfive">
        <a href="https://www.w3schools.com/sql/func_sqlserver_count.asp#:~:text=The%20COUNT()%20function%20returns,NULL%20values%20are%20not%20counted.">Reference Link</a>
    </string>

    <string name="querythree_linkone">
        <a href="https://www.w3schools.com/sql/sql_between.asp">Reference Link</a>
    </string>

    <string name="querythree_linktwo">
        <a href="https://www.w3schools.com/sql/sql_in.asp">Reference Link</a>
    </string>

    <string name="querythree_linkthree">
        <a href="https://www.w3schools.com/sql/sql_join_inner.asp">Reference Link</a>
    </string>

    <string name="querythree_linkfour">
        <a href="https://www.w3schools.com/sql/sql_orderby.asp">Reference Link</a>
    </string>

    <string name="querythree_linkfive">
        <a href="https://www.w3schools.com/sql/sql_join_right.asp">Reference Link</a>
    </string>

    <string name="queryfour_linkone">
        <a href="https://www.w3schools.com/sql/sql_like.asp">Reference Link</a>
    </string>

    <string name="queryfour_linktwo">
        <a href="https://www.w3schools.com/sql/sql_alias.asp">Reference Link</a>
    </string>

    <string name="queryfour_linkthree">
        <a href="https://www.w3schools.com/sql/sql_groupby.asp">Reference Link</a>
    </string>

    <string name="queryfour_linkfour">
        <a href="https://www.w3schools.com/sql/sql_any_all.asp">Reference Link</a>
    </string>

    <string name="queryfour_linkfive">
        <a href="https://www.w3schools.com/sql/sql_alter.asp">Reference Link</a>
    </string>

    <string name="queryfive_linkone">
        <a href="https://www.w3schools.com/sql/sql_drop_table.asp">Reference Link</a>
    </string>

    <string name="queryfive_linktwo">
        <a href="https://www.w3schools.com/sql/sql_null_values.asp">Reference Link</a>
    </string>

    <string name="queryfive_linkthree">
        <a href="https://www.w3schools.com/sql/sql_primarykey.ASP">Reference Link</a>
    </string>

    <string name="queryfive_linkfour">
        <a href="https://www.w3schools.com/sql/sql_foreignkey.asp">Reference Link</a>
    </string>

    <string name="queryfive_linkfive">
        <a href="https://www.w3schools.com/sql/sql_unique.asp">Reference Link</a>
    </string>
</resources>
